--- a/app/src/main/res/layout/activity_alarm_box.xml
+++ b/app/src/main/res/layout/activity_alarm_box.xml
@@ -43,18 +43,22 @@
         android:background="#636265">
 
         <Button
+            android:id="@+id/btnMain"
             android:layout_width="130dp"
-            android:layout_height="40dp"
+            android:layout_height="35dp"
             android:layout_marginRight="50dp"
-            android:onClick="toMain"
             android:text="메인화면"
-            android:textStyle="bold" />
+            android:background="#E1E1E1"
+            android:textStyle="bold"
+            android:onClick="toMain"/>
 
         <Button
+            android:id="@+id/btnAlarm"
             android:layout_width="130dp"
-            android:layout_height="40dp"
+            android:layout_height="35dp"
             android:onClick="toAlarm"
             android:text="알림함"
+            android:background="#FFBB00"
             android:textStyle="bold" />
 
 
