--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -134,7 +134,8 @@
         android:layout_marginLeft="25dp"
         android:layout_marginStart="25dp"
         android:onClick="toKanban1"
-        android:text="칸반1" />
+        android:text="칸반1"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/create_kanban"
@@ -146,7 +147,8 @@
         android:layout_marginEnd="28dp"
         android:layout_marginRight="28dp"
         android:onClick="toCreateKanban"
-        android:text="칸반 생성" />
+        android:text="칸반 생성"
+        android:visibility="invisible" />
 
 
 </RelativeLayout>
