--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,17 +104,22 @@
         android:id="@+id/linearLayout9">
         
         <Button
+            android:id="@+id/btnMain"
             android:layout_width="130dp"
-            android:layout_height="40dp"
+            android:layout_height="35dp"
             android:layout_marginRight="50dp"
             android:text="메인화면"
+            android:background="#FFBB00"
+            android:textColor="#000000"
             android:textStyle="bold" />
 
         <Button
+            android:id="@+id/btnAlarm"
             android:layout_width="130dp"
-            android:layout_height="40dp"
+            android:layout_height="35dp"
             android:onClick="toAlarm"
             android:text="알림함"
+            android:background="#E1E1E1"
             android:textStyle="bold" />
 
 
